[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/menus/car_selection_menu.gd" type="Script" id=1]
[ext_resource path="res://Asset/screen.png" type="Texture" id=2]
[ext_resource path="res://Asset/UI/KenneyBasePack/font_semi_bold_40.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/pablo-impallari_dosis/Dosis-SemiBold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Asset/UI/KenneyBasePack/blue_panel_9p.png" type="Texture" id=5]
[ext_resource path="res://Asset/UI/KenneyBasePack/empty_boxTick.png" type="Texture" id=6]
[ext_resource path="res://Asset/UI/KenneyBasePack/blue_boxTick.png" type="Texture" id=7]
[ext_resource path="res://Asset/UI/KenneyBasePack/red_boxTick.png" type="Texture" id=8]
[ext_resource path="res://Asset/UI/KenneyBasePack/green_boxTick.png" type="Texture" id=9]
[ext_resource path="res://Asset/UI/KenneyBasePack/yellow_boxTick.png" type="Texture" id=10]
[ext_resource path="res://Asset/UI/KenneyBasePack/buton_normal.tres" type="StyleBox" id=11]
[ext_resource path="res://Asset/UI/KenneyBasePack/buton_pressed.tres" type="StyleBox" id=12]
[ext_resource path="res://Asset/UI/KenneyBasePack/buton_disable.tres" type="StyleBox" id=13]
[ext_resource path="res://fonts/pablo-impallari_dosis/Dosis-Bold.ttf" type="DynamicFontData" id=14]

[sub_resource type="StyleBoxFlat" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 1, 1, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="StyleBoxFlat" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0
bg_color = Color( 1, 1, 1, 1 )
draw_center = true
border_width_left = 0
border_width_top = 0
border_width_right = 0
border_width_bottom = 0
border_color = Color( 0.8, 0.8, 0.8, 1 )
border_blend = false
corner_radius_top_left = 0
corner_radius_top_right = 0
corner_radius_bottom_right = 0
corner_radius_bottom_left = 0
corner_detail = 8
expand_margin_left = 0.0
expand_margin_right = 0.0
expand_margin_top = 0.0
expand_margin_bottom = 0.0
shadow_color = Color( 0, 0, 0, 0.6 )
shadow_size = 0
anti_aliasing = true
anti_aliasing_size = 1

[sub_resource type="DynamicFont" id=3]

size = 36
use_mipmaps = true
use_filter = true
font_data = ExtResource( 4 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="StyleBoxEmpty" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="DynamicFont" id=5]

size = 40
use_mipmaps = true
use_filter = true
extra_spacing_char = 1
font_data = ExtResource( 14 )
_sections_unfolded = [ "Extra Spacing", "Font", "Settings" ]

[node name="Menu" type="Node2D"]

script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="." index="0"]

texture = ExtResource( 2 )
centered = false
offset = Vector2( 0, -120 )
_sections_unfolded = [ "Offset" ]

[node name="Label" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_top = 110.0
margin_right = 190.0
margin_bottom = 162.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Player"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Driver" type="LineEdit" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 210.0
margin_top = 120.0
margin_right = 446.0
margin_bottom = 166.0
rect_pivot_offset = Vector2( 0, 0 )
hint_tooltip = "click to edit"
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/focus = SubResource( 1 )
custom_styles/normal = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[node name="Label2" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 860.0
margin_top = 100.0
margin_right = 960.0
margin_bottom = 152.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Car"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="NinePatchRect" type="NinePatchRect" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 650.0
margin_top = 190.0
margin_right = 1170.0
margin_bottom = 430.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
_sections_unfolded = [ "Patch Margin" ]

[node name="Cars" type="ItemList" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 670.0
margin_top = 210.0
margin_right = 1150.0
margin_bottom = 410.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/bg = SubResource( 4 )
custom_constants/vseparation = 10
custom_constants/line_separation = 0
custom_constants/icon_margin = 10
custom_constants/hseparation = 10
items = [  ]
select_mode = 0
max_columns = 4
same_column_width = true
fixed_column_width = 100
icon_mode = 0
fixed_icon_size = Vector2( 0, 0 )
_sections_unfolded = [ "Columns", "Icon", "Rect", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="Label3" type="Label" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 90.0
margin_top = 310.0
margin_right = 190.0
margin_bottom = 362.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Color"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="Colors" type="VBoxContainer" parent="." index="7"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 210.0
margin_top = 230.0
margin_right = 440.0
margin_bottom = 450.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Blue" type="HBoxContainer" parent="Colors" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 230.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Radio" type="TextureButton" parent="Colors/Blue" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 8.0
margin_right = 36.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
_sections_unfolded = [ "Size Flags", "Textures" ]

[node name="Label" type="Label" parent="Colors/Blue" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_right = 111.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Blue"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "custom_colors", "custom_fonts" ]

[node name="Red" type="HBoxContainer" parent="Colors" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 56.0
margin_right = 230.0
margin_bottom = 108.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Radio" type="TextureButton" parent="Colors/Red" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 8.0
margin_right = 36.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 8 )
_sections_unfolded = [ "Size Flags", "Textures" ]

[node name="Label" type="Label" parent="Colors/Red" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_right = 101.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Red"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "custom_colors", "custom_fonts" ]

[node name="Green" type="HBoxContainer" parent="Colors" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 112.0
margin_right = 230.0
margin_bottom = 164.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Radio" type="TextureButton" parent="Colors/Green" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 8.0
margin_right = 36.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 9 )
_sections_unfolded = [ "Size Flags", "Textures" ]

[node name="Label" type="Label" parent="Colors/Green" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_right = 135.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Green"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "custom_colors", "custom_fonts" ]

[node name="Yellow" type="HBoxContainer" parent="Colors" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 168.0
margin_right = 230.0
margin_bottom = 220.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Radio" type="TextureButton" parent="Colors/Yellow" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 8.0
margin_right = 36.0
margin_bottom = 44.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 10 )
_sections_unfolded = [ "Size Flags", "Textures" ]

[node name="Label" type="Label" parent="Colors/Yellow" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 40.0
margin_right = 145.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Yellow"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags", "custom_colors", "custom_fonts" ]

[node name="Back" type="Button" parent="." index="8"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 516.0
margin_top = 579.0
margin_right = 765.0
margin_bottom = 664.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = ExtResource( 11 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/focus = ExtResource( 11 )
custom_styles/disabled = ExtResource( 13 )
custom_styles/normal = ExtResource( 11 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0.414062, 0.414062, 0.414062, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.828125, 0.828125, 0.828125, 1 )
custom_colors/font_color_pressed = Color( 0.988281, 0.424652, 0.424652, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back"
flat = false
align = 1

[node name="Line2D" type="Line2D" parent="." index="9"]

visible = false
points = PoolVector2Array( 640, -46.1521, 640, 764.92 )
width = 1.0
default_color = Color( 0, 0, 0, 1 )
texture_mode = 1122107392
sharp_limit = 2.0
round_precision = 8

[node name="Camera" type="Camera2D" parent="." index="10"]

position = Vector2( 640, 360 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[connection signal="text_changed" from="Driver" to="." method="_on_driver_name_changed"]

[connection signal="text_entered" from="Driver" to="." method="_on_driver_name_changed"]

[connection signal="item_selected" from="Cars" to="." method="_on_Car_selected"]

[connection signal="pressed" from="Colors/Blue/Radio" to="." method="_on_Blue"]

[connection signal="pressed" from="Colors/Red/Radio" to="." method="_on_Red"]

[connection signal="pressed" from="Colors/Green/Radio" to="." method="_on_Green"]

[connection signal="pressed" from="Colors/Yellow/Radio" to="." method="_on_Yellow"]

[connection signal="pressed" from="Back" to="." method="_on_Back"]


